Use Deque methods for the boundary
- Use the addFirst, addLast, getFirst and removeFirst methods specified by the [`java.util.Deque`](https://docs.oracle.com/javase/8/docs/api/java/util/Deque.html) interface for the boundary.
- Remove nodes based on index instead of object for the pending node list.